@@ -58,6 +58,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- A "soft" dependency on OkHttp. -->
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.5.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
